# kalshi-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: auth.rs  client.rs  error.rs  lib.rs  tests.rs
src/models/: event.rs  market.rs  mod.rs  order.rs  portfolio.rs  trade.rs
src/ws/: messages.rs  mod.rs  stream.rs
tests/: auth_tests.rs  client_integration.rs
